<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdRegPageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="409dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/backView2"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backIcon2"
            android:layout_width="11dp"
            android:layout_height="18.5dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/backView2"
            app:layout_constraintEnd_toEndOf="@+id/backView2"
            app:layout_constraintStart_toStartOf="@+id/backView2"
            app:layout_constraintTop_toTopOf="@+id/backView2"
            app:srcCompat="@drawable/vector__stroke_" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="409dp"
        android:layout_height="382dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout6">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_tonometre" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="262dp"
            android:layout_height="58dp"
            android:layout_marginTop="176dp"
            android:fontFamily="@font/inter"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/lastRegLabel"
            android:textColor="#1D1D1D"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="292dp"
            android:layout_height="88dp"
            android:layout_marginTop="258dp"
            android:fontFamily="@font/inter"
            android:gravity="center_horizontal|top"
            android:text="@string/tonometre_desc"
            android:textColor="#646978"
            android:textSize="16sp"
            android:letterSpacing="0.01"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="112dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">

        <EditText
            android:id="@+id/modelET"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:background="@drawable/edittext_border"
            android:inputType="textPersonName"
            android:hint="@string/modelRegHint"
            android:fillColor="#FBFCFF"
            style="@style/placeholder"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueButton2"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:background="@drawable/button_blue"
            android:text="@string/thirdRegPageButtonLabel"
            style="@style/blue_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>