<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTonometrActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout19"
        android:layout_width="409dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/backViewT"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/backIconT"
            android:layout_width="11dp"
            android:layout_height="18.5dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/backViewT"
            app:layout_constraintEnd_toEndOf="@+id/backViewT"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/backViewT"
            app:srcCompat="@drawable/vector__stroke_" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout20"
        android:layout_width="409dp"
        android:layout_height="382dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout19">

        <ImageView
            android:id="@+id/imageView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_tonometre" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="262dp"
            android:layout_height="58dp"
            android:layout_marginTop="184dp"
            android:fontFamily="@font/inter"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/newTonometrWelcomeLabel"
            android:textColor="#1D1D1D"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="292dp"
            android:layout_height="88dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter"
            android:gravity="center_horizontal|top"
            android:letterSpacing="0.01"
            android:text="@string/tonometre_desc"
            android:textColor="#646978"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="112dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout20">

        <EditText
            android:id="@+id/deviceET"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:background="@drawable/edittext_border"
            android:inputType="textPersonName"
            android:hint="@string/newTonometrHint"
            android:fillColor="#FBFCFF"
            style="@style/placeholder"
            android:paddingHorizontal="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/newModButton"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:background="@drawable/button_blue"
            android:text="@string/buttonCompRegLabel"
            style="@style/blue_button_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>